# c_bat

./: meson.build
bat/: bat.c  bat.h  meson.build
bat-test/: bat-test.c  bat-test.h  meson.build
